@@ -8,8 +8,14 @@ the rules for this file:
   * keep the format consistent (79 char width, M/D/Y date format).
 
 ------------------------------------------------------------------------------
+03/12/12 Oleh Derevenko
+		* PURE_INLINE macro renamed to ODE_PURE_INLINE and definition of nextafter()
+		  moved into private headed. It's now a responsibility of client code to
+		  make sure nextafter()/nextafterf() are available if dNextAfter() is used.
+
 02/03/12 Oleh Derevenko
 		* Assertion checking macros moved from common.h to error.h
+
 12/18/11 Oleh Derevenko
         * dIVERIFY macro added (same as dIASSERT in debug mode but evaluates its
           expression in release mode) to be used to assert variable value 
